WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60040
Links broken at iplanwebsites.com
https://bugs.webkit.org/show_bug.cgi?id=60040
Summary
Links broken at iplanwebsites.com
Dave Hyatt
Reported
2011-05-03 10:53:39 PDT
The links don't work because line box culling gives the wrong answer for a bounding client rect for empty links that get skipped as part of leading whitespace.
Attachments
Patch
(3.20 KB, patch)
2011-05-03 10:55 PDT
,
Dave Hyatt
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2011-05-03 10:55:17 PDT
<
rdar://problem/9261591
>
Dave Hyatt
Comment 2
2011-05-03 10:55:35 PDT
Created
attachment 92090
[details]
Patch
mitz
Comment 3
2011-05-03 10:57:21 PDT
Comment on
attachment 92090
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=92090&action=review
> Source/WebCore/ChangeLog:7 > + Reviewed by NOBODY (OOPS!). > + > + Need a short description and bug URL (OOPS!) > + > + No new tests. (OOPS!)
Please fill out the info here
> LayoutTests/ChangeLog:5 > +
https://bugs.webkit.org/show_bug.cgi?id=60040
Would be nice to also have the Radar link here.
Dave Hyatt
Comment 4
2011-05-03 11:00:35 PDT
Fixed in
r85623
.
WebKit Review Bot
Comment 5
2011-05-03 11:18:33 PDT
Attachment 92090
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'Source/WebCore/C..." exit_code: 1 Source/WebCore/ChangeLog:5: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug