https://bugs.webkit.org/show_bug.cgi?id=60040 <rdar://problem/9261591>

Reviewed by Dan Bernstein.

Links broken at iplanwebsites.com. Make sure that culledInlineAbsoluteQuads still does
a translation of a 0,0 point to absolute coordinates so that the top left position is
accurate.

Source/WebCore:

Added fast/inline/skipped-whitespace-client-rect.html

* rendering/RenderInline.cpp:
(WebCore::RenderInline::culledInlineAbsoluteQuads):

LayoutTests:

Added fast/inline/skipped-whitespace-client-rect.html

* fast/inline/skipped-whitespace-client-rect-expected.txt: Added.
* fast/inline/skipped-whitespace-client-rect.html: Added.



Canonical link: https://commits.webkit.org/75311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85623 268f45cc-cd09-0410-ab3c-d52691b4dbfc